<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">私厨汇</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="once_again_exit">再按一次退出程序</string>
    <string name="tuijian_chushi">\u0020推荐厨师</string>
    <string name="tuijian_caipin">\u0020推荐菜品</string>
    <string name="more">更多</string>
    <string name="index">首页</string>
    <string name="category">分类</string>
    <string name="order">订单</string>
    <string name="order_none">暂无订单</string>
    <string name="me">我</string>
    <string name="me_addr">我的地址</string>
    <string name="me_collect">我的收藏</string>
    <string name="me_authchef">认证厨师</string>
    <string name="me_kehu">客服电话</string>
    <string name="me_feedback">意见反馈</string>
    <string name="me_share">分享App</string>
    <string name="chushi">厨师</string>
    <string name="caipin">菜品</string>
    <string name="no_data">没有找到符合条件的内容</string>
    <string name="chef_detail">厨师详情</string>
    <string name="chef_detail_times">服务次数</string>
    <string name="chef_detail_yijian">一键预约</string>
    <string name="chef_detail_xuancai">自由选菜</string>
    <string name="chef_detail_pingjia">用户评价</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">密码</string>
    <string name="reg_again_pass">确认密码</string>
    <string name="login_auth">验证码</string>
    <string name="login">登录\u0020/\u0020注册</string>
    <string name="login_login">登录</string>
    <string name="reg">注册</string>
    <string name="login_send">点击发送</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_yijian">一键登录</string>
    <string name="phone_num_notnull">手机号不能为空！</string>
    <string name="setting_about">关于我们</string>
    <string name="pushmsg_center_no_more_msg">木有更多啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>
    <string name="choice">选择</string>
    <string name="choice1">选择\u0020</string>

</resources>