<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <Button
        android:id="@id/chefdetail_yuyue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:alpha="120"
        android:background="@drawable/chefdetail_yuyue_bg"
        android:drawableRight="@drawable/catelog_icon_targetright_grey"
        android:text="马上预约"
        android:textColor="@color/white"
        android:textSize="@dimen/big_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height" >

            <ImageView
                android:id="@id/title_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/back" />

            <TextView
                android:id="@id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/chef_detail"
                android:textColor="@color/orange"
                android:textSize="@dimen/big_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >
                
                <ImageView
                    android:id="@+id/title_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/mine_icon_list_06"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@id/title_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/catelog_btn_collect"
                    android:contentDescription="@null" />
            </LinearLayout>
        </FrameLayout>

        <include layout="@layout/one_greyline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageView
                    android:id="@id/chefdetail_head"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nopic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@id/chefdetail_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blackword"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@id/chefdetail_certification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/catelog_icon_certification"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@id/chefdetail_gold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/catelog_icon_gold"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@id/chefdetail_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/catelog_icon_star"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal" >

                            <ImageView
                                android:id="@+id/grade1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cookgrade_icon_grey"
                                android:contentDescription="@null" />

                            <ImageView
                                android:id="@+id/grade2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cookgrade_icon_grey"
                                android:contentDescription="@null" />

                            <ImageView
                                android:id="@+id/grade3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cookgrade_icon_grey"
                                android:contentDescription="@null" />

                            <ImageView
                                android:id="@+id/grade4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cookgrade_icon_grey"
                                android:contentDescription="@null" />

                            <ImageView
                                android:id="@+id/grade5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cookgrade_icon_grey"
                                android:contentDescription="@null" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@id/chefdetail_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/greyword"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/chefdetail_jiguan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/greyword"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/chef_detail_times"
                        android:textColor="@color/greyword"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/chefdetail_times"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/big_size" />

                    <Button
                        android:id="@id/chefdetail_yijian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/chefdetail_yijian_bg"
                        android:gravity="center"
                        android:text="@string/chef_detail_yijian"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <include
                android:layout_margin="5dp"
                layout="@layout/one_greyline" />

            <TextView
                android:id="@id/chefdetail_jieshao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="10dp"
                android:textColor="@color/greyword"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/chefdetail_xuancai"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/catelog_tab_selected_normal"
                    android:gravity="center"
                    android:text="@string/chef_detail_xuancai"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size" />

                <TextView
                    android:id="@id/chefdetail_pingjia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/chefdetail_shape"
                    android:gravity="center"
                    android:text="@string/chef_detail_pingjia"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/small_size" />
            </LinearLayout>

            <com.goodfriends.personalchef.view.PullToRefreshListView.PullToRefreshListView
                android:id="@+id/pinglun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:visibility="gone" />

            <include
                android:id="@+id/xuancai"
                layout="@layout/layout_xuancai" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>